<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/marg_disha_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#5e3023"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="294dp"
        android:layout_height="78dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/mybutton"
        android:bottomLeftRadius="15dp"
        android:bottomRightRadius="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/accessibility_place_checker"
        android:textSize="18sp"
        android:onClick="pchecker"
        android:textStyle="bold"
        android:topLeftRadius="15dp"
        android:topRightRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="294dp"
        android:layout_height="78dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/mybutton"
        android:bottomLeftRadius="15dp"
        android:bottomRightRadius="15dp"
        android:text="@string/faqs"
        android:onClick="pdf"
        android:textSize="18sp"
        android:textStyle="bold"
        android:topLeftRadius="15dp"
        android:topRightRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="294dp"
        android:layout_height="78dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/mybutton"
        android:bottomLeftRadius="15dp"
        android:bottomRightRadius="15dp"
        android:text="@string/complaints"
        android:onClick="complaints"
        android:textSize="18sp"
        android:textStyle="bold"
        android:topLeftRadius="15dp"
        android:topRightRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="294dp"
        android:layout_height="78dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/mybutton"
        android:bottomLeftRadius="15dp"
        android:bottomRightRadius="15dp"
        android:text="@string/accessible_place_registration"
        android:textSize="17sp"
        android:textStyle="bold"
        android:onClick="regform"
        android:topLeftRadius="15dp"
        android:topRightRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="396dp"
        android:layout_height="235dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/pngtreeinspirational_quotes_t_shirt_design_5874730__1_" />

</androidx.constraintlayout.widget.ConstraintLayout>